Clarify trace instructions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Sourcemap Performance Test</h1>
     <p>This page loads 100 scripts, each referencing a non-existent sourcemap.</p>
-    <p>Open DevTools and record a performance profile to reproduce the slow loading issue.</p>
+    <p>Open DevTools and record a performance profile of this page loading to reproduce the slow sourcemap issue.</p>
     
     <script src="scripts/script1.js"></script>
     <script src="scripts/script2.js"></script>
